Correction UserServiceTest.java v2